--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Mario's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <a href="./public/tools-ranking.html">Tool Ranking Project</a>
+    <h3><a href="./public/tools-ranking.html">Tool Ranking Project</a></h3>
     <img src="./assets/images/toolsImg.png" height="200">
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a> 
-    <br>   
+    <h3> <a href="./public/birthday-invite.html">Birthday Invite Project</a></h3> 
     <img src="./assets/images/birthadayImg.png" height="200">
     <hr>
     <p><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></p>
